# manta-cargo-workspace

./: .gitignore  .gitmodules  Cargo.toml  README.md  release.toml
crates/csm-rs/: Cargo.toml
crates/csm-rs/src/: backend_connector.rs  bss.rs  error.rs
crates/csm-rs/src/bos/: health_check.rs  template.rs  tests.rs
crates/csm-rs/src/bos/session/http_client/v1/: mod.rs
crates/csm-rs/src/bos/session/http_client/v2/: mod.rs  types.rs
crates/csm-rs/src/bos/template/: utils.rs
crates/csm-rs/src/bos/template/csm_rs/: struct.rs  utils.rs
crates/csm-rs/src/bos/template/http_client/v1/: mod.rs  types.rs
crates/csm-rs/src/bos/template/http_client/v2/: mod.rs  types.rs
crates/csm-rs/src/bos/template/shasta/: http_client.rs  utils.rs
crates/csm-rs/src/bss/: http_client.rs  tests.rs  types.rs  utils.rs
crates/csm-rs/src/capmc/: http_client.rs  types.rs  utils.rs
crates/csm-rs/src/cfs/: common.rs  health.rs  mod.rs  session.rs  tests.rs
crates/csm-rs/src/cfs/component/: utils.rs
crates/csm-rs/src/cfs/component/http_client/v2/: mod.rs  types.rs
crates/csm-rs/src/cfs/component/http_client/v3/: mod.rs  types.rs
crates/csm-rs/src/cfs/component/shasta/: http_client.rs
crates/csm-rs/src/cfs/configuration/: utils.rs
crates/csm-rs/src/cfs/configuration/csm_rs/: utils.rs
crates/csm-rs/src/cfs/configuration/csm_rs/struct/: cfs_configuration_request.rs
crates/csm-rs/src/cfs/configuration/http_client/v2/: mod.rs
crates/csm-rs/src/cfs/configuration/http_client/v2/types/: cfs_configuration_request.rs  cfs_configuration_response.rs
crates/csm-rs/src/cfs/configuration/http_client/v3/: mod.rs
crates/csm-rs/src/cfs/configuration/http_client/v3/types/: cfs_configuration.rs  cfs_configuration_request.rs  cfs_configuration_response.rs
crates/csm-rs/src/cfs/configuration/shasta/: http_client.rs  utils.rs
crates/csm-rs/src/cfs/session/: mod.rs  utils.rs
crates/csm-rs/src/cfs/session/http_client/v2/: mod.rs  types.rs
crates/csm-rs/src/cfs/session/http_client/v3/: mod.rs  types.rs
crates/csm-rs/src/commands/: apply_session.rs  get_images_and_details.rs  i_apply_session.rs  i_delete_data_related_to_cfs_configuration.rs  migrate_backup.rs  migrate_restore.rs  mod.rs
crates/csm-rs/src/commands/apply_hw_cluster_pin/: command.rs  tests.rs  utils.rs
crates/csm-rs/src/commands/apply_sat_file/: command.rs  tests.rs  utils.rs
crates/csm-rs/src/commands/i_delete_and_cancel_session/: command.rs  tests.rs
crates/csm-rs/src/common/: authentication.rs  cluster_ops.rs  csm.rs  gitea.rs  jwt_ops.rs  kubernetes.rs  local_git_repo.rs  log_ops.rs  utils.rs  vault.rs
crates/csm-rs/src/hsm/: mod.rs
crates/csm-rs/src/hsm/component/: http_client.rs  types.rs
crates/csm-rs/src/hsm/component_status/http_client/: mod.rs
crates/csm-rs/src/hsm/group/: hacks.rs  http_client.rs  tests.rs  types.rs  utils.rs
crates/csm-rs/src/hsm/hw_inventory/ethernet_interfaces/: http_client.rs  types.rs
crates/csm-rs/src/hsm/hw_inventory/hw_component/: http_client.rs  types.rs  utils.rs
crates/csm-rs/src/hsm/hw_inventory/redfish_endpoint/: http_client.rs  types.rs
crates/csm-rs/src/hsm/memberships/: http_client.rs  types.rs
crates/csm-rs/src/hsm/service/values/role/: hardcoded_values.rs  http_client.rs  types.rs
crates/csm-rs/src/ims/: image.rs  public_keys.rs  s3_client.rs
crates/csm-rs/src/ims/image/: utils.rs
crates/csm-rs/src/ims/image/http_client/: mod.rs  types.rs
crates/csm-rs/src/ims/job/: http_client.rs  types.rs  utils.rs
crates/csm-rs/src/ims/recipe/: http_client.rs  types.rs
crates/csm-rs/src/node/: console.rs  types.rs  utils.rs
crates/csm-rs/src/pcs/power_cap/: http_client.rs  types.rs
crates/csm-rs/src/pcs/power_status/: http_client.rs  types.rs
crates/csm-rs/src/pcs/transitions/: http_client.rs  types.rs
crates/csm-rs/tests/: bos_sessiontemplate_test.rs  bss_bootparameters.rs  cfs_session_test.rs  s3_test.rs
crates/manta/: CHANGELOG.md  Cargo.toml
crates/manta-backend-dispatcher/: Cargo.toml  README.md
crates/manta-backend-dispatcher/src/: audit.rs  contracts.rs  error.rs  lib.rs  types.rs
crates/manta-backend-dispatcher/src/interfaces/: apply_hw_cluster_pin.rs  apply_sat_file.rs  apply_session.rs  bos.rs  bss.rs  cfs.rs  commands.rs  console.rs  get_bos_session_templates.rs  get_images_and_details.rs  group.rs  hardware_metadata.rs  hsm.rs  ims.rs  migrate_backup.rs  migrate_restore.rs  mod.rs  pcs.rs  sat.rs
crates/manta-backend-dispatcher/src/interfaces/hsm/: component.rs  group.rs  hardware_inventory.rs  mod.rs  redfish_endpoint.rs
crates/manta-backend-dispatcher/src/types/: cfs.rs  ims.rs  kafka.rs  mod.rs
crates/manta-backend-dispatcher/src/types/bos/: mod.rs  session.rs  session_template.rs
crates/manta-backend-dispatcher/src/types/cfs/: cfs_configuration_details.rs  cfs_configuration_request.rs  cfs_configuration_response.rs  component.rs  mod.rs
crates/manta-backend-dispatcher/src/types/cfs/session/: mod.rs
crates/manta-backend-dispatcher/src/types/hsm/inventory/: mod.rs
crates/manta-backend-dispatcher/src/types/pcs/: mod.rs
crates/manta-backend-dispatcher/src/types/pcs/power_status/: types.rs
crates/manta-backend-dispatcher/src/types/pcs/transitions/: types.rs
crates/manta-ws/: Cargo.toml
crates/manta/src/cli/: build.rs  process.rs
crates/manta/src/cli/commands/: add_hw_component_cluster.rs  delete_hw_component_cluster.rs
crates/manta/src/cli/commands/apply_hw_cluster_pin/: command.rs
crates/manta/src/cli/commands/apply_hw_cluster_unpin/: command.rs
