[package]
name = "manta-backend-dispatcher"
version = "0.1.71"
edition = "2021"
license-file = "LICENSE"
description = "Traits to be developed by Mesa backends"
documentation = "https://github.com/eth-cscs/manta-backend-dispatcher/blob/main/README.md"
homepage = "https://github.com/eth-cscs/manta-backend-dispatcher/blob/main/README.md"
repository = "https://github.com/eth-cscs/manta-backend-dispatcher"

[dependencies]
chrono = { workspace = true, default-features = false }
#futures-io = "0.3.31"
futures-io = { workspace = true }
# futures-util = "0.3.28"
# futures = { version = "0.3.28", default-features = false }
# k8s-openapi = { version = "0.20.0", features = ["v1_26"] }
# kube = { version = "0.87.2", features = ["ws"] }
#log = "0.4.27"
log = { workspace = true } 
rdkafka = { workspace = true }
reqwest = { workspace = true , default-features = false, features = ["blocking", "json", "rustls-tls", "socks"] }
serde_json = { workspace = true }
serde = { workspace = true , features = ["derive"] }
serde_yaml = { workspace = true } # TODO: deprecated, need to replace, potential candidate: yaml-rust2
strum_macros = { workspace = true }
strum = { workspace = true }
thiserror = { workspace = true }
tokio = { workspace = true, features = ["full"] }
uuid = { workspace = true }

# The profile that 'dist' will build with
[profile.dist]
inherits = "release"
lto = "thin"
